--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-hello.ko
-hello.mod.c
-hello.mod.o
-hello.o
+*.ko
+*.mod.c
+*.mod.o
+*.o
 modules.order
 Module.symvers
 README.md
-.hello.ko.cmd
-.hello.mod.o.cmd
-.hello.o.cmd
+*.ko.cmd
+*.mod.o.cmd
+*.o.cmd
 .tmp_versions/
